Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115159

QmlCache cpp files are always generated differently

XMLWordPrintable

    • All
    • fb4cc245e (dev), 79f625b6b (6.6), 3d2418b74 (6.5)

      Some cpp files in the QmlCache are always generated slightly different. When using compiler cache (e.g. ccache) this forces the compiler to run which causes quite some overhead in our ci builds.

       

      I've attached an example project with one Qml file included in a static qt module. For every cmake run the cpp file in the QmlCache is generated with a different order of variables:

      Steps to reproduce:

      • Run cmake on the example project and build the project.
      • Save the content of 'cmake-build-debug/.rcc/qmlcache/QmlCacheProblem_qml'
      • Delete the build folder, rerun cmake and the build
      • Compare the content of 'cmake-build-debug/.rcc/qmlcache/QmlCacheProblem_qml'

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            jschwers Jan Schwers
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes