src/qmlcompiler/qqmljscodegenerator_p.h
@@ -294,7 +294,39 @@ private:
     bool m_skipUntilNextLabel = false;
 
     QStringList m_includes;
-    QHash<int, QHash<QQmlJSScope::ConstPtr, QString>> m_registerVariables;
+
+    struct RegisterVariablesKey
+    {
+        QString internalName;
+        int registerIndex = -1;
+
+    private:
+        friend size_t qHash(const RegisterVariablesKey &key, size_t seed = 0) noexcept
+        {
+            return qHashMulti(seed, key.internalName, key.registerIndex);
+        }
+
+        friend bool operator==(
+                const RegisterVariablesKey &lhs, const RegisterVariablesKey &rhs) noexcept
+        {
+            return lhs.registerIndex == rhs.registerIndex && lhs.internalName == rhs.internalName;
+        }
+
+        friend bool operator!=(
+                const RegisterVariablesKey &lhs, const RegisterVariablesKey &rhs) noexcept
+        {
+            return !(lhs == rhs);
+        }
+    };
+
+    struct RegisterVariablesValue
+    {
+        QString variableName;
+        QQmlJSScope::ConstPtr storedType;
+        int numTracked = 0;
+    };
+
+    QHash<RegisterVariablesKey, RegisterVariablesValue> m_registerVariables;
 };
 
 QT_END_NAMESPACE
